overflow x fix

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     font-family: Public Sans;
     color: rgba(0, 0, 0, 0.775);
     max-width: 100vw;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 .navbar{
 display: flex;
